<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_history"
    android:orientation="vertical"
    tools:context=".Activity.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" >

        <Button
            android:id="@+id/his_cla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_classic"
            android:text="@string/model_classic"
            android:textSize="24dp"
            android:alpha="0.6"/>

        <Button
            android:id="@+id/his_lim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_limit"
            android:text="@string/model_limit"
            android:textSize="24dp" />

        <Button
            android:id="@+id/his_cnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_countdown"
            android:text="@string/countdown"
            android:textSize="24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="32dp"
            android:textColor="#00008B"
            android:layout_marginLeft="6dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textSize="32dp"
            android:textColor="#00008B"
            android:layout_marginLeft="6dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="108dp"
            android:background="@drawable/btn_classic"
            android:text="@string/finish"
            android:textSize="24dp" />
    </LinearLayout>

    <ListView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>