<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/game2048"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="240dp"
            android:background="@drawable/bg_btn"
            android:text="@string/game2048"
            android:alpha="0.6"
            android:textSize="24dp"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:textStyle="italic" />

        <Button
            android:id="@+id/game_plane"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/bg_btn"
            android:text="@string/gameplane"
            android:alpha="0.6"
            android:textSize="24dp"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:textStyle="italic"/>

    </LinearLayout>

    <!--  设置下方选择控件  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal">

        <Button
            android:id="@+id/wish_center"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn"
            android:text="@string/wishCenter"
            android:textColor="#000"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/task_center"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn"
            android:text="@string/taskCenter"
            android:textColor="#000"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/achievement"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn"
            android:text="@string/achievement"
            android:textColor="#000"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/relax"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:alpha="0.5"
            android:background="@drawable/bg_btn"
            android:text="@string/relax"
            android:textColor="#000"
            android:textSize="18dp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>