<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@mipmap/bg_1"
    android:layout_gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/add_wish"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/addWish"
        android:textSize="24dp"
        android:textColor="#00bfff"
        android:background="@drawable/bg_btn"
        android:drawableRight="@mipmap/add_2"/>

    <TextView
        android:id="@+id/prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/edit_select"
        android:text="还没有准备愿望哦，点击添加一个吧！"
        android:textSize="18dp"
        android:gravity="center"
        android:textColor="#00bfff"
        android:clickable="true"
        android:visibility="gone" />

    <ListView
        android:id="@+id/wishes"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarFadeDuration="0"
        android:fadeScrollbars="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/wish_center"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:alpha="0.5"
            android:background="@drawable/bg_btn"
            android:text="@string/wishCenter"
            android:textColor="#000"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/task_center"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn"
            android:text="@string/taskCenter"
            android:textColor="#000"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/achievement"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn"
            android:text="@string/achievement"
            android:textColor="#000"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/relax"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn"
            android:text="@string/relax"
            android:textColor="#000"
            android:textSize="18dp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>