<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_menu"
    android:orientation="vertical"
    tools:context=".Activity.MenuActivity">

    <TextView
        android:id="@+id/pic_2048"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="24dp"
        android:background="@mipmap/bg_2048"
        android:alpha="0.7" />


    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingTop="6dp">

        <Button
            android:id="@+id/classic"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_classic"
            android:text="@string/model_classic"
            android:textSize="36dp" />

        <Button
            android:id="@+id/limit"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_limit"
            android:text="@string/model_limit"
            android:textSize="36dp" />

        <Button
            android:id="@+id/countdown"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_countdown"
            android:text="@string/countdown"
            android:textSize="35dp" />

    </LinearLayout>
</LinearLayout>