<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_2"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/gold"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:text="@string/myGoal"
        android:textSize="48dp"
        android:gravity="center"
        android:textColor="#CDAD00"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <!--  设置每日任务的下拉菜单  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/daily_achieve"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:text="    每日任务    "
                android:alpha="0.7"
                android:textSize="30dp"
                android:textColor="#00bfff"
                android:gravity="center"
                android:background="@drawable/bg_tv" />

            <ListView
                android:id="@+id/daily_lv_achieve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone" />

        </LinearLayout>

        <!--  设置主线任务的下拉菜单  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_achieve"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:text="    主线任务    "
                android:alpha="0.7"
                android:textSize="30dp"
                android:textColor="#00bfff"
                android:gravity="center"
                android:layout_gravity="right"
                android:background="@drawable/bg_tv" />

            <ListView
                android:id="@+id/main_lv_achieve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone" />

        </LinearLayout>

        <!--  设置支线任务的下拉菜单  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/side_achieve"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:text="    支线任务    "
                android:alpha="0.7"
                android:textSize="30dp"
                android:textColor="#00bfff"
                android:gravity="center"
                android:background="@drawable/bg_tv" />

            <ListView
                android:id="@+id/side_lv_achieve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>

    <!--  设置下方选择控件  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal">

        <Button
            android:id="@+id/wish_center"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn"
            android:text="@string/wishCenter"
            android:textColor="#000"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/task_center"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn"
            android:text="@string/taskCenter"
            android:textColor="#000"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/achievement"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:alpha="0.5"
            android:background="@drawable/bg_btn"
            android:text="@string/achievement"
            android:textColor="#000"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/relax"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn"
            android:text="@string/relax"
            android:textColor="#000"
            android:textSize="18dp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>