<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_menu"
    android:orientation="vertical"
    tools:context=".Activity.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="54dp"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/home"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginRight="160dp"
            android:background="@drawable/btn_title"
            android:layout_gravity="center"
            android:paddingRight="8dp"/>

        <Button
            android:id="@+id/music"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/btn_title"
            android:layout_gravity="center"
            android:paddingRight="8dp"
            android:layout_marginRight="24dp"/>

        <Button
            android:id="@+id/author"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/btn_title"
            android:layout_gravity="center"
            android:layout_marginRight="6dp"
            android:paddingBottom="2dp"
            android:paddingRight="8dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/pic_2048"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@mipmap/bg_2048"
        android:alpha="0.7" />

    <Button
        android:id="@+id/model"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:background="@drawable/btn_model"
        android:text="@string/model"
        android:textSize="36dp"
        android:textColor="#fff"
        />

    <Button
        android:id="@+id/start"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_start"
        android:layout_marginTop="30dp"
        android:text="@string/start"
        android:textSize="36dp"
        android:textColor="#fff"
        />

    <Button
        android:id="@+id/history"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_history"
        android:layout_marginTop="30dp"
        android:text="@string/history"
        android:textSize="36dp"
        android:textColor="#fff"
        />

</LinearLayout>